cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services. 

Parameters:
  myInstanceType:
    Description: Choose your instance type
    Type: String
    Default: t2.micro

  myKeyPair:
    Description: Choose your keypair
    Type: AWS::EC2::KeyPair::KeyName
    AllowedValues:
         - firstkeypair
  
  myVPC:
    Description: Choose your vpc
    Type: AWS::EC2::VPC::Id

  latestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

 
Resources:
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref latestAmiId
      InstanceType: !Ref myInstanceType
      KeyName: !Ref myKeyPair
      LaunchTemplate: !Ref myLT
      SecurityGroups: !Ref mySecGroup
      UserData: !Base64 
          #!/bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        cd /home/ec2-user
        FOLDER="https://github.com/Seymanurkara/001-roman-numerals-converter.git"
        mkdir templates
        wget -P templates ${FOLDER}/templates/index.html
        wget -P templates ${FOLDER}/templates/result.html
        wget ${FOLDER}/roman-numerals-converter-app.py
        python3 roman-numerals-converter-app.py



  myLT:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !Ref latestAmiId
        InstanceType: !Ref myInstanceType
        KeyName: !Ref myKeyPair
        SecurityGroups:
          - !Ref mySecGroup
        UserData: !Base64 |
          dnf update -y
          dnf install python3 -y
          dnf install python3-pip -y
          pip3 install flask
          dnf install git -y
          cd /home/ec2-user
          FOLDER="https://github.com/Seymanurkara/001-roman-numerals-converter.git"
          mkdir templates
          wget -P templates ${FOLDER}/templates/index.html
          wget -P templates ${FOLDER}/templates/result.html
          wget ${FOLDER}/roman-numerals-converter-app.py
          python3 roman-numerals-converter-app.py
      LaunchTemplateName: Web-Server-Of-StackName
      
  mySecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ssh and http # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: Seymanur-cfn-proje
      VpcId: !Ref myVPC

    
  

  
Outputs:
